Fix overflow

--- a/client-next/src/style.css
+++ b/client-next/src/style.css
@@ -13,5 +13,5 @@
 .itinerary-list-container {
   width: 36rem;
   height: calc(100vh - 200px);
-  overflow: scroll;
+  overflow-y: auto;
 }
